style.css
.image-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 30vh;
    padding: 2vh 5vw;
}

.image-container img {
    max-width: 100%;
    height: auto;
    max-height: 50vh; /* Set a maximum height for the image */
    width: auto; /* Let the width adjust proportionally */
    opacity: 0; /* Initially hide the image */
    transition: opacity 2s ease; /* Add transition for opacity */
    margin-right: 5vw;
}

@media (max-width: 500px) {
    .image-container img {
        max-width: 50vw;
        max-height: 150px;
    }

    .heading h1 {
        font-size: clamp(18px, 5vw, 26px);
    }

    .heading h4 {
        font-size: clamp(14px, 3.5vw, 18px);
    }
}

/* Apply fade-in animation */
.fade-in {
    animation: fadeIn 3.5s forwards;
}

@keyframes fadeIn {
    0% { opacity: 0; }
    100% { opacity: 1; }
}  

body{
    margin: 0;
    background-color: #faf0e6;
    color: #28282B;
}

h1 {
    font-size: clamp(24px, 4vw, 45px); /* Adjust the font size as needed */
}

h4 {
    font-size: clamp(16px, 2vw, 20px);
    font-style: italic;
}

.caption {
    font-size: 1.1em;
    text-align: center;
    font-style: italic;
    margin-top: 20px;
    width: 100%;
    max-width: 850px;
    margin-left: auto;
    margin-right: auto;
    padding: 0 5px;
    box-sizing: border-box;
}

.mainContainer{
    width:100%;
    max-width: 1200px;
    margin: auto;
    padding: 0 5vw;
    box-sizing: border-box;
}

.heading{
    text-align: center;
    /* background-color: beige; */
}

.articleWrapper{
    width:100%;
    max-width: 850px;
    /* outline: 1px solid black; */
    margin: auto;
    padding: 0 5px;
    box-sizing: border-box;
    font-size: 20px;
}

img{
    width: 100%;
}

/* graph 1 */

#graphScrollbarWrapper{
    aspect-ratio: 1.72;
    display: flex;
    width: 100%;
    max-width: 850px;
    margin: auto;
}

#sideView {
    width: 20%;
    max-width: 170px;
}

#viz1 {
    width: 100%; /* fill wrapper */
}

/* graph 2 */

#viz2{
    width: 80%; /* Adjust as needed */
    margin: auto; /* Center the element horizontally */
    /* text-align: center; Center the content horizontally */
}

/* .tooltip {
    position: absolute;
    background-color: white;
    color: black;
    padding: 5px;
    border: 1px solid black;
} */

#viz6{
    text-align: center; /* Center the content horizontally */
}

.specific-caption {
    margin-bottom: 10px; /* Adjust the margin-bottom value as needed */
}
  
/* graph 7 */
.slider-container {
    display: flex;
    justify-content: center;
}

.slider {
    width: 840px;
}

/* ------- break ----- */

#viz0-stickyBox,
#viz6-stickyBox,
#viz7-stickyBox{
    position: sticky;
    top:10px;
    z-index: -1;
}

/* #viz1-stick-passersby{  */
    /* background-color: rgba(149, 149, 149, 0.5); */

    /* outline: 12px solid rgba(255, 166, 0, 0.636); */
    /* background-color: rgba(255, 166, 0, 0.34); */
/* } */

#viz1-stick-passersby p{
    background-color: #faf0e683;
}

.spacer-5{
    height: 5vh;
    /* background-color: rgba(255, 166, 0, 0.34); */
}

.spacer-10{
    height: 10vh;
    /* background-color: rgba(255, 166, 0, 0.34); */
}

.spacer-30{
    height: 30vh;
    /* background-color: rgba(255, 166, 0, 0.34); */
}

.spacer-50{
    height: 50vh;
    /* background-color: rgba(255, 166, 0, 0.34); */

}
.spacer-100{
    height: 50vh;
    /* background-color: rgba(255, 166, 0, 0.34); */
}

.heading p {
    font-size: clamp(14px, 1.5vw, 18px);
}

